apps/argocd-ts-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-tailscale
  namespace: argocd
  annotations:
    tailscale.com/hostname: "argocd-kube-access" 
    tailscale.com/tags: "tag:k8s-operator"
    tailscale.com/backend-protocol: "https"
    argocd.argoproj.io/sync-wave: "2"
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - argocd-tailscale
  rules:
    - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
