apps/hello.yml
apiVersion: v1
kind: Namespace
metadata:
  name: test-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kube
  namespace: test-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-kube
  template:
    metadata:
      labels:
        app: hello-kube
    spec:
      containers:
      - name: hello-kube
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kube-service
  namespace: test-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kube
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kube-ingress
  namespace: test-web
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Ton ClusterIssuer
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - hello.kube.dungeonmomo.cc
    secretName: hello-kube-tls
  rules:
  - host: hello.kube.dungeonmomo.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-kube-service
            port:
              number: 80
