apps/monitoring.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-tailscale
  namespace: monitoring
  annotations:
    tailscale.com/hostname: "grafana-kube"
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - grafana-tailscale
  rules:
  - http:
    paths:
    - path: /
      pathType: Prefix
      backend:
        service:
          name: kube-prometheus-stack-grafana
          port:
            number: 80
